--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
         rgba(241, 239, 241, 0.945),
         rgba(229, 226, 228, 0.966)
       ),
-      url("");
+      url("");  /*aqui una foto */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
