--- a/style.css
+++ b/style.css
@@ -647,10 +647,10 @@ body {
     }
   }
   .showcase-container .main-title {
-    color: #da125b; /* Cambia el color del texto del título */
+    color: #f80593; /* Cambia el color del texto del título */
     font-size: 3em; /* Ajusta el tamaño del texto del título */
 }
 .showcase-container p {
-  color: #da125b; /* Cambia el color del texto del párrafo */
+  color: #0e0009; /* Cambia el color del texto del párrafo */
   font-size: 1.5em; /* Ajusta el tamaño del texto del párrafo */
 }
