--- a/views/login.html
+++ b/views/login.html
@@ -15,7 +15,7 @@
           <input class="login-Form__input" type="text" name="username" id="username" required autocomplete="username"/>
         <label class="login-Form__label" for="password">Contraseña:</label>
           <input class="login-Form__input" type="password" name="password" id="password" required autocomplete="current-password"/>
-        <button type="submit" id="iniciarSesion">Iniciar Sesión</button>
+        <button type="button" id="iniciarSesion">Iniciar Sesión</button>
         
       </form>
     </section>
