--- a/style.css
+++ b/style.css
@@ -773,27 +773,39 @@ button:hover {
 /* Container para el formulario */
 
 
-.form-registro-container {
+/* Estilos generales */
+
+
+/* Estilos del contenedor principal */
+
+
+/* Estilos para el formulario */
+.form-registro {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 10%;
-  height: 10vh; /* Ocupar todo el viewport */
+  height: 100vh; /* Ocupar todo el viewport */
   background-color: #f0f0f0;
   margin: 0;
   padding: 20px;
   box-sizing: border-box;
-}
-
-/* Estilos para el formulario */
-.form-registro {
-  width: 10%;
-  max-width: 50px; /* Ajustamos el ancho máximo */
+  width: 100%;
+  max-width: 400px; /* Ajustamos el ancho máximo */
   padding: 25px;
   background-color: #ffffff; /* Fondo blanco */
   border: 2px solid #ccc;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Agregamos sombra suave */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
+}
+
+.login-Form {
+  width: 100%;
+  max-width: 400px; /* Ajustamos el ancho máximo */
+  padding: 25px;
+  background-color: #ffffff; /* Fondo blanco */
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
 }
 
 /* Estilo para el título del formulario */
@@ -830,7 +842,7 @@ button:hover {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.3s; /* Agregamos transición para el hover */
+  transition: background-color 0.3s; /* Transición para el hover */
 }
 
 .button:hover {
