Se vincula el link de reserva con el login

--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ body {
     margin: auto;
     transform: translate(-150%);
     animation: about-text-animation 1s ease-in-out forwards;
+    text-align: justify;
   }
   
   @keyframes about-text-animation {
