--- a/views/resultado.html
+++ b/views/resultado.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro Exitoso</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Enlace opcional a tu archivo CSS -->
+    <link rel="stylesheet" href="styles.css"> 
     <link rel="stylesheet" href="./styleLoginFormulario.css" />
     <link rel="stylesheet" href="./normalize.css" />
 </head>
